@@ -5,18 +5,28 @@ import de.upb.sse.cutNRun.analyzer.intraprocedural.ArgumentSource;
 import de.upb.sse.cutNRun.analyzer.intraprocedural.ArgumentSourceAnalysis;
 import de.upb.sse.cutNRun.analyzer.intraprocedural.Result;
 import de.upb.sse.cutNRun.analyzer.intraprocedural.StringConcatenationSource;
+import de.upb.sse.cutNRun.analyzer.soot.BackwardsInterproceduralCFG;
+import heros.InterproceduralCFG;
 import org.apache.commons.collections4.CollectionUtils;
 import org.junit.jupiter.api.Test;
+import sootup.analysis.interprocedural.icfg.JimpleBasedInterproceduralCFG;
+import sootup.analysis.interprocedural.ide.JimpleIDESolver;
+import sootup.callgraph.ClassHierarchyAnalysisAlgorithm;
 import sootup.core.graph.StmtGraph;
+import sootup.core.jimple.basic.Value;
 import sootup.core.jimple.common.stmt.Stmt;
 import sootup.core.model.SootMethod;
+import sootup.core.signatures.MethodSignature;
 import sootup.core.types.ClassType;
 import sootup.core.views.View;
 import sootup.java.bytecode.frontend.inputlocation.JavaClassPathAnalysisInputLocation;
+import sootup.java.core.language.JavaJimple;
 import sootup.java.core.views.JavaView;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static de.upb.sse.cutNRun.analyzer.intraprocedural.ArgumentSource.*;
@@ -67,6 +77,7 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
+    //TOdo: test fails- logic for static fields not implemented(for potential solution refer diary)
     @Test
     public void shouldAnalyzeStaticFieldAccess() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/interprocedural/method/field/sameClass/staticField"));
@@ -74,6 +85,7 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
+    //TODO: below commented are stringconcat tests
     /*@Test
     public void shouldAnalyzeTestFile1() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/File1"));
@@ -114,7 +126,7 @@ class TraditionalReflectionMethodTest {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/testJars/CutNRunTestJars.jar"));
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
-    }
+    }*/
 
     //Parameter tests
     @Test
@@ -168,6 +180,7 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
+    //TODO: doesn't work - static field logic not written
     @Test
     public void shouldAnalyzeFieldTestFile3() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/field/File3"));
@@ -175,6 +188,7 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
+    /*
     //multiple factors tests -concat
     @Test
     public void shouldAnalyzeMultipleFactorsTestStringConcat1() {
@@ -204,39 +218,40 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
+
     //If branch tests
     @Test
     public void shouldAnalyzeIfBranchTest1() {
-        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/multipleSources/ifBranch1"));
-        ClassType classType = view.getIdentifierFactory().getClassType("Main");
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/interprocedural/method/branching/ifBranch1"));
+        ClassType classType = view.getIdentifierFactory().getClassType("MethodIfBranch1");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
-                                                   .getMethodSignature(classType, "test", "void", List.of("java.lang.String")))
+                                                   .getMethodSignature(classType, "caller", "void", Collections.emptyList()))
                                     .get();
-        Stmt startStmt = sootMethod.getBody().getStmts().get(9);
+        Stmt startStmt = sootMethod.getBody().getStmts().get(8);
         StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
 
-        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
-        argumentSourceAnalysis.execute();
+        //final List<MethodSignature> startMethod = Collections.singletonList(methodWithReflection.getSignature());
+        //final List<MethodSignature> mainMethodEntryPoints = getMainMethodEntryPoints();
+        final List<MethodSignature> cgEntryPoints = view.getClasses()
+                                                        .flatMap(sootClass -> sootClass.getMethods().stream())
+                                                        .filter(method -> method.isPublic())
+                                                        .filter(method -> method.hasBody())
+                                                        .map(SootMethod::getSignature)
+                                                        .collect(Collectors.toList());
 
-        Result result = argumentSourceAnalysis.getResult();
-        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
-        stmtGraph.getStmts().stream().forEach(stmt->
-                                              {
-                                                  System.out.println("====================");
-                                                  System.out.println("Stmt: [" + stmt + "]");
-                                                  System.out.println("before: " + argumentSourceAnalysis.getFlowAfter(stmt));
-                                                  System.out.println("after: " + argumentSourceAnalysis.getFlowBefore(stmt));
-                                                  System.out.println("====================");
-                                              });
-        assertEquals(argumentSourceAnalysis.getFlowBefore(stmtGraph.getStartingStmt()).size(), 2);
-        List<ArgumentSource> sources = argumentSourceAnalysis.getFlowBefore(stmtGraph.getStartingStmt()).stream()
-                              .map(result1 -> result1.getArgumentSource())
-                                      .collect(Collectors.toUnmodifiableList());
-        assertTrue(CollectionUtils.isEqualCollection(sources, Arrays.asList(RETURN_FROM_METHOD, LOCAL)));
-        //assertEquals(false, stringConcatResult.isEveryStringFromSameSource());
-        //assertEquals(2, stringConcatResult.getArgumentSources().size());
-        assertTrue(stringConcatResult.isEmpty());
-        //assertEquals(UNKOWN, result.getArgumentSource());
+        JimpleBasedInterproceduralCFG icfg = new JimpleBasedInterproceduralCFG(
+                (new ClassHierarchyAnalysisAlgorithm(view)).initialize(cgEntryPoints)
+                , view, false, true);     //new JimpleBasedInterproceduralCFG(view, entryPoints, false, true);
+        BackwardsInterproceduralCFG backwardICFG = new BackwardsInterproceduralCFG(icfg, view);
+
+        IDEValueAnalysisProblem problem = new IDEValueAnalysisProblem(backwardICFG, null, startStmt, (JavaView) view);
+        JimpleIDESolver<Value, String, InterproceduralCFG<Stmt, SootMethod>> solver = new JimpleIDESolver<>(problem);
+        solver.solve();
+        Map<Value, String> result = solver.resultsAt(backwardICFG.getEndPointsOf(problem.getMethodConsistingResult())
+                                                                 .stream().findFirst().get());
+        //assertEquals(result.size(), 1);
+        //assertEquals("execute", result.get(JavaJimple.newLocal("hardCoddedResult", view.getIdentifierFactory().getClassType("java.lang.String"))));
+
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
     }
@@ -281,12 +296,12 @@ class TraditionalReflectionMethodTest {
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
     }
-
+*/
     //Test string new keyword
     @Test
     public void shouldAnalyzeStingNewKeyword() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringNewKeyword/basicNewKeyword"));
-        ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
+        /*ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "test", "void", List.of("java.lang.String")))
                                     .get();
@@ -300,7 +315,7 @@ class TraditionalReflectionMethodTest {
         StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
         assertTrue(stringConcatResult.isEmpty());
         assertEquals(LOCAL, result.getArgumentSource());
-        assertEquals(false, argumentSourceAnalysis.isBranching());
+        assertEquals(false, argumentSourceAnalysis.isBranching());*/
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
@@ -309,7 +324,7 @@ class TraditionalReflectionMethodTest {
     @Test
     public void shouldAnalyzeStingNewKeyword2() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringNewKeyword/basicNewKeyword2"));
-        ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
+        /*ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "test", "void", List.of("java.lang.String")))
                                     .get();
@@ -323,7 +338,7 @@ class TraditionalReflectionMethodTest {
         StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
         assertTrue(stringConcatResult.isEmpty());
         assertEquals(LOCAL, result.getArgumentSource());
-        assertEquals(false, argumentSourceAnalysis.isBranching());
+        assertEquals(false, argumentSourceAnalysis.isBranching());*/
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
@@ -332,7 +347,7 @@ class TraditionalReflectionMethodTest {
     @Test
     public void shouldAnalyzeStringNewKeywordWithMethodReturnSource() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringNewKeyword/basicNewKeyword-methodReturn"));
-        ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
+        /*ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "test", "void", List.of("java.lang.String")))
                                     .get();
@@ -346,16 +361,17 @@ class TraditionalReflectionMethodTest {
         StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
         assertTrue(stringConcatResult.isEmpty());
         assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
-        assertEquals(false, argumentSourceAnalysis.isBranching());
+        assertEquals(false, argumentSourceAnalysis.isBranching());*/
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
     }
 
-    @Test
+    //TODO: logic not written
+    /*@Test
     public void shouldAnalyzeStringNewKeywordWithDifferentConstructors() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringNewKeyword/DifferentConstructors"));
-        ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
+        *//*ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "test", "void", List.of("java.lang.String")))
                                     .get();
@@ -369,11 +385,11 @@ class TraditionalReflectionMethodTest {
         StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
         assertTrue(stringConcatResult.isEmpty());
         assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
-        assertEquals(false, argumentSourceAnalysis.isBranching());
+        assertEquals(false, argumentSourceAnalysis.isBranching());*//*
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
-    }
+    }*/
 
     @Test
     public void shouldAnalyzeStringNewKeywordForEmptyString() {
@@ -398,7 +414,7 @@ class TraditionalReflectionMethodTest {
         programAnalyzerPort.analyze();
     }
 
-    @Test
+   /* @Test
     public void shouldAnalyzeStringNewKeywordWithStringConcat() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringNewKeyword/stringConcat"));
         ClassType classType = view.getIdentifierFactory().getClassType("StringConcat");
@@ -419,9 +435,9 @@ class TraditionalReflectionMethodTest {
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
-    }
+    }*/
 
-    @Test
+    /*@Test
     public void shouldAnalyzeStringBuffer() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/method/StringBufferAndBuilder"));
         ClassType classType = view.getIdentifierFactory().getClassType("StringBufferBuilder");
@@ -442,13 +458,13 @@ class TraditionalReflectionMethodTest {
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
-    }
+    }*/
 
     @Test
     public void testing() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/testJars/hibernate-core-6.6.3.Final.jar"));
 
-        *//*ClassType classType = view.getIdentifierFactory().getClassType("org.apache.commons.lang3.ClassUtils");
+        ClassType classType = view.getIdentifierFactory().getClassType("org.apache.commons.lang3.ClassUtils");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "getPublicMethod", "java.lang.reflect.Method", List.of(
                                                            "java.lang.Class","java.lang.String", "java.lang.Class[]")))
@@ -483,5 +499,5 @@ class TraditionalReflectionMethodTest {
         //For manual testing
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
-    }*/
+    }
 }
